Some secondary stuff

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -28,6 +28,9 @@
  NI_VARIANT_08:0 "§OPrussonationalism§!"
  NI_VARIANT_08_desc:0 "§OPrussonationalism§! emerged as a concept out of the First National Awakening of the 1920s, which tore through Eastern Europe and nearly unraveled the Russian Empire. Prior to the 1920s, Prussia had existed as a divided state, split between Brandenburg-Prussia and Russian Prussia. It was due to this that a newly independent Prussia had no real national identity to speak of, split between the interests of aristocrats and the ethnic minorities that composed much of the nation’s hinterlands. Poles, Lithuanians, Baltic Germans, and a sizable Russian minority all had diluted the previously German dominated region.\n\nThe ideology of Prussonationalism emerged as an effort to reconcile the Germanic Nationalist ideology with the reality of their divided nation. Rejecting the Pan-German ideology of their forebears, the new Prussonationalist state seeks to reunify with their Western brethren and escape the shadow of their former Russian overlords."
 
+ NI_VARIANT_09:0 "§OInfinistocracy§!"
+ NI_VARIANT_09_desc:0 "§OInfinistocracy§! is not an ideology or a system of governance, but an ideal. For centuries, the world has trended towards anarchy under the rule of peasants, demanding greater and greater rights to destroy themselves with increasing effectiveness. With the advent of Recursive Immortality, this will no longer be an issue. The old guard, the captains of industry, the true power behind the nation have shed the shackles of mortality.\n\nA guiding hand now controls the wheel of society, whether it is aware of it or not is irrelevant. Those whose hands are on the wheel are beyond death, and with the restrictions of mortality shed, a new long-term vision for humanity comes into view.\n\nThe meek will beget the strong; the unwashed masses will be led, as they once were, into a shining future built on the blueprints of a deathless conspiracy.\n\n§rThe future only belongs to those who will live to see it.§!"
+
  ds:0 "Despotism"
  ds_noun:0 "Despotism"
  ds_desc:0 "Despotist State"
@@ -62,6 +65,9 @@
  DS_VARIANT_10:0 "§ORasputinite Orthodoxy§!"
  DS_VARIANT_10_desc:0 "Rasputin’s cult of personality had long been a source of problems for Russian authorities in Siberia, yet despite their attempts at suppression he remained strangely popular. Some attributed this to his strange charisma, which helped garner him a surprisingly large group of followers who attended his services and indulged his eccentricities. During the Great War, Rasputin used the influx of Russian troops throughout Siberia as an opportunity to preach and expand his influence. He frequently held mass pre-battle baptisms for troops on their way to the meatgrinder fronts of the Amur and Korea.\n\nAfter the war, Rasputin’s sway over the peasantry of Siberia had grown deeply entrenched. He used the growing technologic development of Russia to his full advantage, growing his flock through radio and Kinegram broadcasts. All of this fell beneath the notice of St. Petersburg, largely due to local officials falling under the sway of the Rasputinite cult, either out of genuine faith or a willingness to take their generous contributions.\n\nBy 1933, the aging Mad Monk had fully wormed his faithful into the organs of the Siberian state and lived in immense luxury off the back of his followers. He maintained an enormous harem of female followers, funded local religious militias, and had most of the local government officials in his pocket. Rasputin’s particular brand of Orthodoxy emphasizes himself as the sole speaker of the faith and his importance as the spiritual guide for the Russian peasantry."
 
+ DS_VARIANT_11:0 "§OInfinistocracy§!"
+ DS_VARIANT_11_desc:0 "§OInfinistocracy§! is not an ideology or a system of governance, but an ideal. For centuries, the world has trended towards anarchy under the rule of peasants, demanding greater and greater rights to destroy themselves with increasing effectiveness. With the advent of Recursive Immortality, this will no longer be an issue. The old guard, the captains of industry, the true power behind the nation have shed the shackles of mortality.\n\nA guiding hand now controls the wheel of society, whether it is aware of it or not is irrelevant. Those whose hands are on the wheel are beyond death, and with the restrictions of mortality shed, a new long-term vision for humanity comes into view.\n\nThe meek will beget the strong; the unwashed masses will be led, as they once were, into a shining future built on the blueprints of a deathless conspiracy.\n\n§rThe future only belongs to those who will live to see it.§!"
+ 
  ds_drift:0 "Daily drift towards Despotism"
 
  rc:0 "Reactionaries"
@@ -81,7 +87,10 @@
 
  RC_VARIANT_05:0 "§OSocial Credit§!"
  RC_VARIANT_05_desc:0 "§OSocial Credit§! advocates for a financial system that places emphasis on the creation and distribution of credit. It contends that the current monetary system, based on debt and interest, creates economic imbalances and inequality. Instead, it proposes a system where the government, rather than banks, has the authority to create and control the money supply to ensure that it serves the needs of the people.\n\nCentral to the party's ideology is the belief in social and economic justice. It promotes the idea of "social credit," which suggests that all citizens should have access to a basic income or dividend to ensure a decent standard of living and address poverty. The party seeks to address economic disparities by distributing the wealth generated through productive activities more equitably."
-
+ 
+ RC_VARIANT_06:0 "§OInfinistocracy§!"
+ RC_VARIANT_06_desc:0 "§OInfinistocracy§! is not an ideology or a system of governance, but an ideal. For centuries, the world has trended towards anarchy under the rule of peasants, demanding greater and greater rights to destroy themselves with increasing effectiveness. With the advent of Recursive Immortality, this will no longer be an issue. The old guard, the captains of industry, the true power behind the nation have shed the shackles of mortality.\n\nA guiding hand now controls the wheel of society, whether it is aware of it or not is irrelevant. Those whose hands are on the wheel are beyond death, and with the restrictions of mortality shed, a new long-term vision for humanity comes into view.\n\nThe meek will beget the strong; the unwashed masses will be led, as they once were, into a shining future built on the blueprints of a deathless conspiracy.\n\n§rThe future only belongs to those who will live to see it.§!"
+ 
  rc_drift:0 "Daily drift towards Reactionary"
 
  cn:0 "Conservatives"
@@ -108,7 +117,10 @@
 
  CN_VARIANT_07:0 "§OConservative Agrarianism§!"
  CN_VARIANT_07_desc:0 "§OAgrarianism§!is an ideology rooted in the belief that the agricultural way of life is essential for human well-being and societal harmony. It emphasizes the importance of agriculture as the foundation of a sustainable and just society. Agrarianism emphasizes the direct connection between individuals and the land, promoting a decentralized and self-sufficient approach to farming and rural living.\n\nCentral to agrarianism is the notion that the land is a precious resource that should be respected and protected for future generations. It advocates for responsible stewardship of the environment, focusing on sustainable farming practices, conservation, and the preservation of rural landscapes. Agrarianism seeks to establish a balance between human needs and the natural world, recognizing the interconnectedness of agricultural systems with ecosystems and biodiversity."
-
+ 
+ CN_VARIANT_08:0 "§OInfinistocracy§!"
+ CN_VARIANT_08_desc:0 "§OInfinistocracy§! is not an ideology or a system of governance, but an ideal. For centuries, the world has trended towards anarchy under the rule of peasants, demanding greater and greater rights to destroy themselves with increasing effectiveness. With the advent of Recursive Immortality, this will no longer be an issue. The old guard, the captains of industry, the true power behind the nation have shed the shackles of mortality.\n\nA guiding hand now controls the wheel of society, whether it is aware of it or not is irrelevant. Those whose hands are on the wheel are beyond death, and with the restrictions of mortality shed, a new long-term vision for humanity comes into view.\n\nThe meek will beget the strong; the unwashed masses will be led, as they once were, into a shining future built on the blueprints of a deathless conspiracy.\n\n§rThe future only belongs to those who will live to see it.§!"
+ 
  cn_drift:0 "Daily drift towards Conservatism"
 
  lb:0 "Liberals"
@@ -142,6 +154,9 @@
  LB_VARIANT_09:0 "§ONarodism§!"
  LB_VARIANT_09_desc:0 "The Russian Narodniks are a movement that emerged in the 1860s in Russia. The Narodniks seek to address the social and economic issues faced by the peasantry and advocate for radical social change.\n\nThe Narodniks believe in the importance of the rural peasantry, or the narod, as the driving force behind social transformation. They aim to mobilize the peasants and rural workers to challenge the existing power structures and establish a more egalitarian and just society.\n\nOne of the key ideas of the Narodniks is "going to the people", which involves intellectuals and activists living among the peasantry to understand their needs and aspirations better. By doing so, they aim to awaken class consciousness among the peasantry and organize them for collective action."
 
+ LB_VARIANT_10:0 "§OInfinistocracy§!"
+ LB_VARIANT_10_desc:0 "§OInfinistocracy§! is not an ideology or a system of governance, but an ideal. For centuries, the world has trended towards anarchy under the rule of peasants, demanding greater and greater rights to destroy themselves with increasing effectiveness. With the advent of Recursive Immortality, this will no longer be an issue. The old guard, the captains of industry, the true power behind the nation have shed the shackles of mortality.\n\nA guiding hand now controls the wheel of society, whether it is aware of it or not is irrelevant. Those whose hands are on the wheel are beyond death, and with the restrictions of mortality shed, a new long-term vision for humanity comes into view.\n\nThe meek will beget the strong; the unwashed masses will be led, as they once were, into a shining future built on the blueprints of a deathless conspiracy.\n\n§rThe future only belongs to those who will live to see it.§!"
+ 
 
  lb_drift:0 "Daily drift towards Liberalism"
 
@@ -166,6 +181,10 @@
 
  AN_VARIANT_06:0 "§OCorporatocracy§!"
  AN_VARIANT_06_desc:0 "§OCorporatocracy§! is less of an ideology and more of a government system, but in the general sense refers to a government pervasively controlled by corporate entities. Historical examples such as the British East India Company abound, while contemporary examples are somewhat harder to find despite the near inescapable nature of multinational megacorporations.\n\nWhile the specifics may be different Corporatocratic states nonetheless are invariably controlled by one or more corporate groups, sometimes acting under the guise of a democratic system. Votes may still be counted, but they only matter as much as the country's executives allow them to."
+
+ AN_VARIANT_07:0 "§OInfinistocracy§!"
+ AN_VARIANT_07_desc:0 "§OInfinistocracy§! is not an ideology or a system of governance, but an ideal. For centuries, the world has trended towards anarchy under the rule of peasants, demanding greater and greater rights to destroy themselves with increasing effectiveness. With the advent of Recursive Immortality, this will no longer be an issue. The old guard, the captains of industry, the true power behind the nation have shed the shackles of mortality.\n\nA guiding hand now controls the wheel of society, whether it is aware of it or not is irrelevant. Those whose hands are on the wheel are beyond death, and with the restrictions of mortality shed, a new long-term vision for humanity comes into view.\n\nThe meek will beget the strong; the unwashed masses will be led, as they once were, into a shining future built on the blueprints of a deathless conspiracy.\n\n§rThe future only belongs to those who will live to see it.§!"
+ 
 
  an_drift:0 "Daily drift towards Anarcho-Liberalism"
 
@@ -205,6 +224,10 @@
 
  SS_VARIANT_11:0 "§OLeft Narodism§!"
  SS_VARIANT_11_desc:0 "The Russian Narodniks are a movement that emerged in the 1860s in Russia. The Narodniks seek to address the social and economic issues faced by the peasantry and advocate for radical social change.\n\nThe Narodniks believe in the importance of the rural peasantry, or the narod, as the driving force behind social transformation. They aim to mobilize the peasants and rural workers to challenge the existing power structures and establish a more egalitarian and just society.\n\nOne of the key ideas of the Narodniks is "going to the people", which involves intellectuals and activists living among the peasantry to understand their needs and aspirations better. By doing so, they aim to awaken class consciousness among the peasantry and organize them for collective action."
+
+ SS_VARIANT_12:0 "§OInfinistocracy§!"
+ SS_VARIANT_12_desc:0 "§OInfinistocracy§! is not an ideology or a system of governance, but an ideal. For centuries, the world has trended towards anarchy under the rule of peasants, demanding greater and greater rights to destroy themselves with increasing effectiveness. With the advent of Recursive Immortality, this will no longer be an issue. The old guard, the captains of industry, the true power behind the nation have shed the shackles of mortality.\n\nA guiding hand now controls the wheel of society, whether it is aware of it or not is irrelevant. Those whose hands are on the wheel are beyond death, and with the restrictions of mortality shed, a new long-term vision for humanity comes into view.\n\nThe meek will beget the strong; the unwashed masses will be led, as they once were, into a shining future built on the blueprints of a deathless conspiracy.\n\n§rThe future only belongs to those who will live to see it.§!"
+ 
 
  jc:0 "Jacobins"
  jc_noun:0 "Jacobins"
