--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -48,6 +48,34 @@
   ##########################
   # MINISTERS/LEADERS/TRAITS
   ##########################
+  RUS_PB_Pyotr_Stoylpin:0 "Pyotr Stolypin"
+  RUS_PB_Alexander_Guchkov:0 "Alexander Guchkov"
+  RUS_PB_Alexei_Khvostov:0 "Alexei Khvostov"
+  RUS_PB_Stepan_Beletsky:0 "Stepan Beletsky"
+  RUS_PB_Vladimir_Purishkevich:0 "Vladimir Purishkevich"
+  RUS_PB_Nikolay_Ustryalov:0 "Nikolay Ustryalov"
+  RUS_PB_Nikolai_Markov:0 "Nikolai Markov"
+  RUS_PB_Felix_Yusupov:0 "Felix Yusupov"
+  RUS_PB_Anton_Denikin:0 "Anton Denikin"
+  RUS_PB_Vasily_Maklakov:0 "Vasily Maklakov"
+  RUS_PB_Alexander_Poniatoff:0 "Alexander M. Poniatoff"
+  RUS_PB_Pavel_Milyukov:0 "Pavel Milyukov"
+  RUS_PB_Alexander_Kerensky:0 "Alexander Kerensky"
+  RUS_PB_VI_Lenin:0 "Vladimir Lenin"
+  RUS_PB_Vladimir_Vernadsky:0 "Vladimir Vernadsky"
+  RUS_PB_Nicholas_Roerich:0 "Nicholas Roerich"
+  RUS_PB_Viktor_Baidalakov:0 "Viktor Baidalakov"
+  RUS_PB_Lev_Kamenev:0 "Lev Kamenev"
+  RUS_PB_Ayn_Rand:0 "Alisa Rosenbaum"
+  RUS_PB_Alexander_Vvedensky:0 "Alexander Vvedensky"
+
+  PB_Moscow_Circle_Manchurian_Faction:0 "Manchurian Clique"
+  PB_Moscow_Circle_Baltic_Faction:0 "Baltic Clique"
+  PB_Okhrana_Connections:0 "Okhrana Connections"
+  PB_Historian:0 "Historian"
+  PB_Cosmist:0 "Cosmist"
+  PB_Solidarist:0 "Solidarist"
+  PB_Individualist:0 "Individualist"
   
   ##########################
   # IDEAS
@@ -207,6 +235,8 @@
   RUS_OKH_Osterman_Desc:0 "§YHugo Österman§! is the leader of the §YFree Finnish Army§!, and an active member of the Finnish Resistance.\n\n§YIdeology:§! Pragmatism"
   RUS_OKH_Takkinen_Desc:0 "§YJalmari Takkinen§! is the leader of the §YKarelo-Finnish United Front§!, and an active member of the Finnish Resistance.\n\n§YIdeology:§! Ethno-Nationalist"
   RUS_OKH_Hall_Desc:0 "§YArvo Halberg§! is the leader of the §YFinnish Labour Riflemen§!, and an active member of the Finnish Resistance.\n\n§YIdeology:§! Jacobin"
+
+  PB_RUS_Domestic_Politics:0 "Russian Domestic Politics"
 
 
 
