--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -2932,9 +2932,12 @@ CHANGE_ADVISOR:1 "\nYou can replace this advisor by clicking here and selecting 
 # EXTRA IDEAS
 ########################
 
-PB_PER_dominated_oil_market:0 "Britsh Dominated Oil Market"
-PB_KOR_republican_opposition:0 "Republican Opposition"
+PB_PER_dominated_oil_market:0 "British Dominated Oil Market"
+PB_PER_dominated_oil_market_desc:0 "After Britain won the Great Game and the Ottoman Empire was defeated, the British and the Anglo-Persian Oil Company gained full control over the Persian oil fields. This deal has caused great unrest amongst the Persian population."
 PB_EGY_sudanese_rebels:0 "Sudanese Rebels"
+PB_EGY_sudanese_rebels_desc:0 "After the divison of Africa by the Europeans, the territories of Sudan and Darfur were handed over to Egypt. Even though the Egyptians and Sudanese share many cultural similarities, the Sudanese are not happy with their current predicament and wish to be given either independence or some autonomy within Egypt."
+PB_BHU_hermit_kingdom:0 "The Hermit Kingdom"
+PB_BHU_hermit_kingdom_desc:0 "On the fringes of the Himalayan mountain range lay an almost unknown kingdom. Bhutan, now known as the hermit kingdom, is a country that lacks far behind the rest of the world in terms of mostly everything. It has good relations with Britain and its Indian domains, the British domains are also their biggest trading partners."
 
 
 
