Russia focus and event work

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -94,10 +94,96 @@
   ##########################
   # EVENTS
   ##########################
-  Russian_Assassination_Attempt.1.t:0 "Redemption Day"
-  Russian_Assassination_Attempt.1.d:0 "It was hard to hear a portable radio over the sound of the crowd; an instrumental jazz tune hummed in one ear. She paid close attention to the notes, the warbling of the bass section, the trumpets blaring. As it all slowed to a close, an announcer with a thick Polish accent chimed in. It wasn’t the typical announcer, who at the moment was tied up in a broom closet.\n\n“Good morning, listeners. The time is eight AM. For those attending the parade this morning, the weather service has advised carrying a parasol due to the chance of rain. Don’t touch that dial now listeners, we’re just getting started with today’s catalogue-“\n\nKasandra flicked the radio off and dug her hands into her coat pockets, one hand withdrawing an old half burnt photograph. Two dirty looking children and their mother on a farm, smiling in squalor, faces distorted by melted film. The mother’s face was all but obscured by the charring; Kasandra couldn’t remember what she looked like.\n\nIn a few moments she was near the head of the crowd. The Tsar was off the podium, all smiles and shaking hands. A few nervous looking security agents orbited around him and shooed off the odd heckler. She made her way through the throng of people slowly, casually, pretending to try and get a better look. After a moment, she was within ten feet, the perfect distance.\n\nAs the Tsar made his way past, she casually slipped her hand into her pocket once more and withdrew a pistol. Seconds felt like hours now, adrenaline saturating as the sights leveled. One of the officers spotted her, sprinting towards the Tsar. Michael only had the briefest moment to glance at the commotion, eyes meeting the barrel of a gun. It was as if time stopped at that exact instant; an emperor faced with a peasant’s pistol. There wasn’t time to duck, all Michael could do was watch dumbfounded.\n\nOne barely audible prayer escaped the woman’s lips before she pulled the trigger."
-  Russian_Assassination_Attempt.1.a:0 "“God, please.”"
+  Russian_Politics.1.t:0 "Third Meeting of the Provisonal Duma"
+  Russian_Politics.1.d:0 ""
+  Russian_Politics.1.a:0 "Can you all stop fighting for five minutes?"
 
+  Russian_Politics.2.t:0 "Discussions on Regional Autonomy"
+  Russian_Politics.2.d:0 ""
+  Russian_Politics.2.a:0 "One Russia, One Duma"
+  Russian_Politics.2.b:0 "Perhaps we can be a bit more experimental?"
+
+  Russian_Politics.3.t:0 "Preparing for St. Petersburg"
+  Russian_Politics.3.d:0 ""
+  Russian_Politics.3.a:0 "A Tsar must stand with his people."
+  Russian_Politics.3.b:0 "...but perhaps some extra security wouldn't hurt."
+
+  Russian_Politics.4.t:0 "Anti-Tsarist Agitation"
+  Russian_Politics.4.d:0 ""
+  Russian_Politics.4.a:0 "Have these agitators swept aside!"
+
+  Russian_Politics.5.t:0 "Concerning Radio Chatter from Galicia"
+  Russian_Politics.5.d:0 ""
+  Russian_Politics.5.a:0 "It's probably nothing."
+  Russian_Politics.5.b:0 "Send some agents to investigate, just in case."
+
+  Russian_Politics.6.t:0 "The Tsar Arrives in St. Petersburg"
+  Russian_Politics.6.d:0 ""
+  Russian_Politics.6.a:0 "Let's see what the Russian people have to say."
+
+  Russian_Politics.7.t:0 "Agents Report back from Galicia"
+  Russian_Politics.7.d:0 ""
+  Russian_Politics.7.a:0 "We can address this after the festivities."
+
+  Russian_Politics.8.t:0 "The Tsar meets with the Locals"
+  Russian_Politics.8.d:0 ""
+  Russian_Politics.8.a:0 "I'm sure we can address their concerns."
+
+  Russian_Assassination_Attempt.1.t:0 "Redemption Day"
+  Russian_Assassination_Attempt.1.d:0 "It was hard to hear a portable radio over the sound of the crowd; an instrumental jazz tune hummed in one ear. She paid close attention to the notes, the warbling of the bass section, the trumpets blaring. As it all slowed to a close, an announcer with a thick Polish accent chimed in. It wasn’t the typical announcer, who at the moment was tied up in a broom closet.\n\n“Good morning, listeners. The time is eight AM. For those attending the parade this morning, the weather service has advised carrying a parasol due to the chance of rain. Don’t touch that dial now listeners, we’re just getting started with today’s catalogue-“\n\nKasandra flicked the radio off and dug her hands into her coat pockets, one hand withdrawing an old half burnt photograph. Two dirty looking children and their mother on a farm, smiling in squalor, faces distorted by melted film. The mother’s face was all but obscured by the charring; Kasandra couldn’t remember what she looked like.\n\nIn a few moments she was near the head of the crowd. The Tsar was off the podium, all smiles and shaking hands. A few nervous looking security agents orbited around him and shooed off the odd heckler. She made her way through the throng of people slowly, casually, pretending to try and get a better look. After a moment, she was within ten feet, the perfect distance.\n\nAs the Tsar made his way past, she casually slipped her hand into her pocket once more and withdrew a pistol. Seconds felt like hours now, adrenaline saturating as the sights leveled. One of the officers spotted her, sprinting towards the Tsar. Michael only had the briefest moment to glance at the commotion, eyes meeting the barrel of a gun. It was as if time stopped at that exact instant; an emperor faced with a peasant’s pistol. There wasn’t time to duck, all Michael could do was watch dumbfounded.\n\nOne barely audible prayer escaped the woman’s lips before she pulled the trigger.\n\n"God, please.""
+  Russian_Assassination_Attempt.1.a:0 "The bullet strikes the Tsar!"
+  Russian_Assassination_Attempt.1.b:0 "The bullet misses the Tsar and hits the Prime Minister!"
+
+  Russian_Assassination_Attempt.2.t:0 "Free Polish Army claims Attack"
+  Russian_Assassination_Attempt.2.d:0 ""
+  Russian_Assassination_Attempt.2.a:0 "Mark them as high priority!"
+
+  Russian_Assassination_Attempt.3.t:0 "Okhrana uncovers German Involvement"
+  Russian_Assassination_Attempt.3.d:0 ""
+  Russian_Assassination_Attempt.3.a:0 "Expel the German embassy!"
+
+  Russian_Assassination_Attempt.4.t:0 "Russia blames us for St. Petersburg Attack"
+  Russian_Assassination_Attempt.4.d:0 ""
+  Russian_Assassination_Attempt.4.a:0 "This is preposterous!"
+
+  Russian_Assassination_Attempt.5.t:0 "Terrorists seize Riga Airliner!"
+  Russian_Assassination_Attempt.5.d:0 ""
+  Russian_Assassination_Attempt.5.a:0 "Send Jet Troopers to storm the airliner!"
+  Russian_Assassination_Attempt.5.b:0 "Stall for time and negotiate."
+
+  Russian_Assassination_Attempt.6.t:0 "Polaris 2 Reclaimed with Minimal Bloodshed"
+  Russian_Assassination_Attempt.6.d:0 ""
+  Russian_Assassination_Attempt.6.a:0 "Excellent work!"
+
+  Russian_Assassination_Attempt.7.t:0 "Polaris 2 Reclaimed with Casualties"
+  Russian_Assassination_Attempt.7.d:0 ""
+  Russian_Assassination_Attempt.7.a:0 "Well, that's technically a success"
+
+  Russian_Assassination_Attempt.8.t:0 "Bloodbath on Polaris 2"
+  Russian_Assassination_Attempt.8.d:0 ""
+  Russian_Assassination_Attempt.8.a:0 "Who the hell trained these idiots?"
+
+  Russian_Assassination_Attempt.9.t:0 "Riga Terrorists seek Asylum"
+  Russian_Assassination_Attempt.9.d:0 ""
+  Russian_Assassination_Attempt.9.a:0 "We can't afford further conflict with Russia."
+  Russian_Assassination_Attempt.9.b:0 "One man's terrorist is another man's freedom fighter."
+
+  Russian_Assassination_Attempt.10.t:0 "Riga Terrorists seek Asylum"
+  Russian_Assassination_Attempt.10.d:0 ""
+  Russian_Assassination_Attempt.10.a:0 "We can't afford further conflict with Russia."
+  Russian_Assassination_Attempt.10.b:0 "One man's terrorist is another man's freedom fighter."
+
+  Russian_Assassination_Attempt.11.t:0 "Germany grants Riga Terrorists Asylum"
+  Russian_Assassination_Attempt.11.d:0 ""
+  Russian_Assassination_Attempt.11.a:0 "Well, we can't exactly expel the embassy again."
+
+  Russian_Assassination_Attempt.12.t:0 "Sweden grants Riga Terrorists Asylum"
+  Russian_Assassination_Attempt.12.d:0 ""
+  Russian_Assassination_Attempt.12.a:0 "Can't trust the Swedes with anything!"
+
+  Russian_Assassination_Attempt.13.t:0 "Riga Terrorists fail to gain Asylum"
+  Russian_Assassination_Attempt.13.d:0 ""
+  Russian_Assassination_Attempt.13.a:0 "Good, deploy the jet troopers."
 
   ##########################
   # GUI DESCRIPTIONS
@@ -236,8 +322,16 @@
   RUS_OKH_Takkinen_Desc:0 "§YJalmari Takkinen§! is the leader of the §YKarelo-Finnish United Front§!, and an active member of the Finnish Resistance.\n\n§YIdeology:§! Ethno-Nationalist"
   RUS_OKH_Hall_Desc:0 "§YArvo Halberg§! is the leader of the §YFinnish Labour Riflemen§!, and an active member of the Finnish Resistance.\n\n§YIdeology:§! Jacobin"
 
+  PB_RUS_Okhrana_Resource_Drop_Small_tt:0 "£Generic_Green_Arrow £RUS_Okhrana_Resources §G+15 Okhrana Resources§!"
+  PB_RUS_Okhrana_Resource_Drop_Medium_tt:0 "£Generic_Green_Arrow £RUS_Okhrana_Resources §G+30 Okhrana Resources§!"
+  PB_RUS_Okhrana_Resource_Drop_Large_tt:0 "£Generic_Green_Arrow £RUS_Okhrana_Resources §G+50 Okhrana Resources§!"
+  PB_RUS_Okhrana_Resource_Expense_Small_tt:0 "£Generic_Red_Arrow_Down £RUS_Okhrana_Resources §R-20 Okhrana Resources§!"
+  PB_RUS_Okhrana_Resource_Expense_Medium_tt:0 "£Generic_Red_Arrow_Down £RUS_Okhrana_Resources §R-40 Okhrana Resources§!"
+  PB_RUS_Okhrana_Resource_Expense_Large_tt:0 "£Generic_Red_Arrow_Down £RUS_Okhrana_Resources §R-60 Okhrana Resources§!"
+
   PB_RUS_Domestic_Politics:0 "Russian Domestic Politics"
 
+  PB_RUS_Winter_War_Countdown:0 "Defeat the Finnish Insurgency"
 
 
   ########################## 
@@ -248,7 +342,11 @@
   ########################## 
   # TOOLTIPS
   ##########################
+  PB_RUS_Commit_to_Finland_tt:0 "§YIn an attempt to sate the whims of the §!§GUltramilitarists§!, §YRussia will fully commit her army to defeating the lingering Finnish insurgents.§!\n\n"
+  PB_RUS_Commit_to_Finland2_tt:0 "§YFailing to eliminate the Finnish Insurgency by the deadline will undermine the Duma's authority to the benefit of the§! §GUltramilitarists§!\n\n"
 
+  PB_All_Russian_Parliament_tt:0 "§YMaintaining a unitary Duma will ensure Russians remain dominant in the legislature over ethnic minority interests, but will preclude us from appointing ministers from autonomies in parliament.§!"
+  PB_Autonomist_Parliament_tt:0 "§YAllowing ethnic minorities to represent themselves in limited autonomous legislatures will cede some power from ethnic Russians, but will also allow us to appoint non Russian ministers to government positions.§!"
 
   #######################
   # PARTIES
