Russia GFX and BOP work

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -202,6 +202,17 @@
   PB_RUS_All_Russian_Dumas:0 "An All Russian National Duma"
   PB_RUS_Begin_St_Petersburg:0 "On to St. Petersburg"
 
+  PB_RUS_Second_Time_of_Troubles:0 "Mother Russia Bleeds"
+  PB_RUS_Blame_Okhrana:0 "Blame the Okhrana"
+  PB_RUS_Blame_Poles:0 "Blame the Poles"
+  PB_RUS_Overhaul_Intelligence:0 "Overhaul the Intelligence Apparatus"
+  PB_RUS_Recall_Drozdovsky:0 "Recall Drozdovsky"
+  PB_RUS_Abolish_Galician_Duma:0 "Abolish the Galician Duma"
+  PB_RUS_Operation_Azalea:0 "Operation Azalea"
+  PB_RUS_End_German_Relations:0 "Ban the German Embassy"
+  PB_RUS_Proceed_with_Elections:0 "Proceed with the Elections"
+  PB_RUS_Suspend_Elections:0 "Suspend the Elections"
+
 
   ########################## 
   # Decisions
@@ -332,6 +343,24 @@
   PB_RUS_Domestic_Politics:0 "Russian Domestic Politics"
 
   PB_RUS_Winter_War_Countdown:0 "Defeat the Finnish Insurgency"
+
+  ##########################
+  # BALANCE OF POWER
+  ##########################  
+  RUS_power_balance:0 "The War for the Soul of Russia"
+  RUS_Militarist_Side:0 "The Moscow Circle"
+  RUS_Duma_Side:0 "The National Duma"
+  RUS_balance_range:0 "No Dominant Faction"
+  RUS_Duma_Side_low_control_range:0 "Low National Duma Authority"
+  RUS_Duma_Side_medium_control_range:0 "Moderate National Duma Authority"
+  RUS_Duma_Side_high_control_range:0 "High National Duma Authority"
+  RUS_Duma_Side_total_control_range:0 "Absolute National Duma Authority"
+
+  RUS_Militarist_Side_low_control_range:0 "Low Moscow Circle Influence"
+  RUS_Militarist_Side_medium_control_range:0 "Significant Moscow Circle Influence"
+  RUS_Militarist_side_high_control_range:0 "Pervasive Moscow Circle Influence"
+  RUS_Militarist_Side_control_range:0 "Overwhelming Moscow Circle Influence"
+
 
 
   ########################## 
