America Remaster is going again

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -83,7 +83,7 @@ AME_Peacenik_Dislike_Government:0 "The £UC_SI_Peaceniks §YPeaceniks§! are §R
 
 AME_Union_Support_Government:0 "The £UC_SI_Unions §YTrade Unions§! §Gsupport§! us | §G[?AME.AME_Union_Support]%§!"
 AME_Union_Neutral_Government:0 "The £UC_SI_Unions §YTrade Unions§! are §Yneutral§! toward us | §Y[?AME.AME_Union_Support]%§!"
-AME_Union_Dislike_Government:0 "The £UC_SI_Unions §YTrade Unions§! do not §Rsupport§! us | §R[?AME.AME_Union_Support]%§!"
+AME_Union_Dislike_Government:0 "The £UC_SI_Unions §YTrade Unions§! do not §Rsupport§! us | §R[?AME.AME_Union_Support]%§! | §R[?AME.trad_stability_variable]§!"
 
 AME_Megacorp_Support_Government:0 "The £UC_SI_Corporate §YMegacorporations§! §Gsupport§! us | §G[?AME.AME_Megacorp_Support]%§!"
 AME_Megacorp_Neutral_Government:0 "The £UC_SI_Corporate §YMegacorporations§! are §Yneutral§! toward us | §Y[?AME.AME_Megacorp_Support]%§!"
@@ -438,6 +438,9 @@ AME_EIEC_increase_industrial_capacity_factory_gain_high_tt:0 "§GIncreases§! §
 AME_EIEC_decrease_industrial_capacity_factory_gain_low_tt:0 "§RDecreases§! §Yindustrial capacity§! by §Y5%§!.\n\n"
 AME_EIEC_decrease_industrial_capacity_factory_gain_med_tt:0 "§RDecreases§! §Yindustrial capacity§! by §Y10%§!.\n\n"
 AME_EIEC_decrease_industrial_capacity_factory_gain_high_tt:0 "§RDecreases§! §Yindustrial capacity§! by §Y15%§!.\n\n"
+
+
+PB_AME_Trade_Union:0 "Trade Union Support"
 
 PB_Social_Engineering_Modifier:0 "§YSocial Engineering§!"
 
@@ -999,6 +1002,9 @@ PB_AME_Military_Industrial:0 "Renovating the Royal Army"
 PB_AME_Military_Industrial_desc:0 "The United Commonwealth will reform their military forces in the coming years. This process will involve significant changes to the structure, organization, and capabilities of the armed forces. The government will invest heavily in modernizing equipment and technology, as well as training and recruitment of personnel. New strategies and tactics will be developed to address emerging threats and challenges to national security. The goal of these reforms will be to create a more efficient, effective, and agile military that is better equipped to protect the interests and sovereignty of the American Empire at home and abroad."
 PB_AME_Lessons_of_Iberia:0 "Lessons of Iberia"
 PB_AME_Lessons_of_Iberia_desc:0 "The United Commonwealth was heavily involved in the Iberian front of the Great War, which honed our military forces into a cutting edge organization. The war saw the introduction of new technology such as machine guns, automats, and chemical weapons, which caused significant casualties and made traditional tactics ineffective. The traditional strategy of frontal assaults, where troops would charge the enemy lines, proved to be ineffective and costly in terms of lives lost. Instead, a new strategy of trench warfare was developed, where soldiers dug into the ground to create elaborate systems of trenches and fortifications."
+PB_AME_Bailey_Manoveuers:0 "Bailey Maneuvers"
+PB_AME_Bailey_Manoveuers_desc:0 "."
+PB_AME_C9_Training_Regimen:0 "Expand the Montauk Research Site"
 PB_AME_C9_Training_Regimen:0 "Expand the Montauk Research Site"
 PB_AME_C9_Training_Regimen_desc:0 "The United Commonwealth will create a new research site in Montauk. The site will be dedicated to conducting advanced research in various fields such as medicine, genetics, engineering, and more. It will employ top scientists, engineers, and researchers from around the world and will feature state-of-the-art equipment and facilities. The research conducted at this site is expected to lead to groundbreaking discoveries and technological advancements that will benefit the United Commonwealth and the world at large."
 PB_AME_Atlantic_Pond_Expansion:0 "Reinforce the Atlantic Pond Policy"
