--- a/localisation/english/PB_Finland_l_english.yml
+++ b/localisation/english/PB_Finland_l_english.yml
@@ -15,6 +15,27 @@
     
   ##########################
 
+  # Focus
+
+  PB_FINRUS_New_Year:0 "A New Year..."
+  PB_FINRUS_New_Year_desc:0 "A New Year..."
+  PB_FINRUS_Expand_Drug_Trade:0 "Expand Drug Trade"
+  PB_FINRUS_Expand_Drug_Trade_desc:0 "Expand the Drug Trade"
+  PB_FINRUS_Sell_Military_Supplies:0 "Sell Military Supplies"
+  PB_FINRUS_Fabricate_NewReports:0 "Fabricate the Next Report"
+  PB_FINRUS_What_the_Fuck_Is_Going_on_Here:0  "What the fuck is going on here?"
+  PB_FINRUS_Plan_Offensive:0 "Planing Offensive "Suworow""
+  PB_FINRUS_Trial_the_Criminal:0 "Trial the Criminal"
+  PB_FINRUS_Crush_the_Fins:0 "Crush them once and for all"
+  PB_FINRUS_Restore_Order:0 "Reastablish Order in this country"
+  PB_FINRUS_Civilian_Care:0 "Introduce Civilian Rationing"
+  PB_FINRUS_Demand_Airforce:0 "Call for more Air Support"
+  PB_FINRUS_Increase_Supply:0 "Refurbish the Supply Lines"
+  PB_FINRUS_More_Arty_More_Armor:0 "More Artillery and Armor on the Lines"
+  PB_FINRUS_Increase_Winter_Clothing:0 "Supply more Winter Clothing"
+
+  #########################
+
   ##########################
   # Decisions
 
