Russia GFX stuff

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -213,6 +213,20 @@
   PB_RUS_Proceed_with_Elections:0 "Proceed with the Elections"
   PB_RUS_Suspend_Elections:0 "Suspend the Elections"
 
+  PB_RUS_Expand_Area_Zero_Funding:0 "Expand Area Zero Funding"
+  PB_RUS_Appoint_Vavilov:0 "Approve Vavilov for Director"
+  PB_RUS_Appoint_Cherenkov:0 "Approve Cherenkov for Director"
+  PB_RUS_Appoint_Semyonov:0 "Approve Semyonov for Director"
+  PB_RUS_On_the_Level:0 "Keep It Clean"
+  PB_RUS_Unrestricted_Testing:0 "Questionable Ethics"
+  PB_RUS_Project_Solaris:0 "Project §YSOLARIS§!"
+  PB_RUS_Project_Zona:0 "Project §GZONA§!"
+  PB_RUS_Project_Commonality:0 "Project §CCOMMONALITY§!"
+  PB_RUS_Project_Missing_Link:0 "Project §OHOMINIDAE§!"
+  PB_RUS_Project_Autojektor:0 "Project §rAUTOJEKTOR§!"
+  PB_RUS_Project_Primordium:0 "Project §7PRIMORIDUM§!"
+  PB_RUS_Project_Somnambulist:0 "Project §6SOMNAMBULIST§!"
+
 
   ########################## 
   # Decisions
@@ -344,6 +358,14 @@
 
   PB_RUS_Winter_War_Countdown:0 "Defeat the Finnish Insurgency"
 
+  PB_RUS_Area_Zero:0 "Special Research and Development Program"
+  PB_RUS_Area_Zero_desc:0 "\n\n\n\n\n\nAfter the occupation of Manchuria and the creation of Zheltorossiya, the government approved the acquisition of a parcel of land along the border for the creation of a top-secret research campus. Nicknamed §Y“Area Zero”§!, the campus was created as a place far from the prying eyes of the outside world where Russia’s finest minds could cooperate and develop new technologies. With Teslagrad defunct, Area Zero is currently one of the most important development facilities in the Russian Empire.\n\nEvery six months, Area Zero can send their research data to the government and provide a randomized research bonus while expending §YAssets§!. The amount of §YAssets§! expended will dictate the quality and usefulness of the research bonus. §YAssets§! must be acquired regularly to ensure a steady flow of useful research data.\n\nWe can acquire §YAssets§! from various Russian-aligned states throughout China, however this will impact the regime stability of said states. We can also attempt to acquire §YAssets§! in other, potentially compromising methods, however doing so may have unforeseen consequences.\n\nArea Zero currently has access to: £autonomy_texticon  [?RUS.RUS_Area_Zero_Assets] §YAssets§!\n"
+  PB_RUS_Request_AZO_Research_Data:0 "Request Research Data"
+  PB_RUS_Acquire_Assets_North_Manchuria:0 "Acquire Assets in North Manchuria"
+  PB_RUS_Acquire_Assets_Mongolia:0 "Acquire Assets in North Mongolia"
+  PB_RUS_Acquire_Assets_Xinjiang:0 "Acquire Assets in Dzungaria"
+  PB_RUS_Acquire_Assets_Hami:0 "Acquire Assets in Occupied Hami"
+
   ##########################
   # BALANCE OF POWER
   ##########################  
@@ -376,6 +398,9 @@
 
   PB_All_Russian_Parliament_tt:0 "§YMaintaining a unitary Duma will ensure Russians remain dominant in the legislature over ethnic minority interests, but will preclude us from appointing ministers from autonomies in parliament.§!"
   PB_Autonomist_Parliament_tt:0 "§YAllowing ethnic minorities to represent themselves in limited autonomous legislatures will cede some power from ethnic Russians, but will also allow us to appoint non Russian ministers to government positions.§!"
+
+  PB_RUS_On_the_Level_tt:0 "£autonomy_texticon  §YAsset§! Acquisition Missions in China will produce less §YAssets§! when completed, but our methods for acquiring assets will draw less attention from the locals."
+  PB_RUS_Unrestricted_Testing_tt:0 "£autonomy_texticon  §YAsset§! Acquisition Missions in China will produce more §YAssets§! when completed, but our methods for acquiring assets will draw more attention from the locals."
 
   #######################
   # PARTIES
