Oh boy you are gonna like this

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1142,6 +1142,12 @@
   PB_Promote_Imperial_Reformism:0 "£Generic_Red_Arrow Promote Imperial Reformism"
   PB_Promote_Imperial_Conservatism:0 "£Generic_Blue_Arrow Promote Imperial Conservatism"
 
+  PB_imperial_power_struggle_loc:0 "The current outlook of Imperial Reform is [get_reform_outlook]\n\nDominions and Commonwealths represented below have their geo-political alignment measured by a percentage variable. If a nation has an alignment percentage of §Y0%§! to §Y<50%§! they will be aligned within the British sub faction within the Empire. From §Y50%>§! to §Y100%§! such nation(s) will be aligned within the American sub faction within the Empire. All other nations within the Empire not represented on the list below will always side with Britain should an Imperial Civil War breakout. Countries on the list that are neutral will also side with Britain.\n\n[QUE.GetFlag] Quebec is [get_imperial_sphere_quebec]\n[WAF.GetFlag] Carnegia is [get_imperial_sphere_carnegia]\n[VIC.GetFlag] Victoria is [get_imperial_sphere_victoria]\n[BCL.GetFlag] The Northwest Territory is [get_imperial_sphere_borealia]\n[IRE.GetFlag] Ireland is [get_imperial_sphere_ireland]\n[HNK.GetFlag] Hong Kong is [get_imperial_sphere_hongkong]\n[BAF.GetFlag] The British African Authority is [get_imperial_sphere_westafrica]\n[BEF.GetFlag] East Africa is [get_imperial_sphere_eastafrica]\n[ACD.GetFlag] Acadiana is [get_imperial_sphere_acadiana]"
+  PB_Promote_Imperial_Reformism:0 "£Generic_Red_Arrow Promote Imperial Reformism"
+  PB_Promote_Imperial_Conservatism:0 "£Generic_Blue_Arrow Promote Imperial Conservatism"
+
+  EMG_AME_power_balance:0 "Imperial Dominance"
+
   PB_Quebec_Pro_American:0 "§bAmerican Aligned§!  ( ~[?QUE.ImpManagement_QUE]% )"
   PB_Quebec_Pro_British:0 "§rBritish Aligned§!  ( ~[?QUE.ImpManagement_QUE]% )"
   PB_Quebec_Neutral:0 "§YNeutral§!  ( ~[?QUE.ImpManagement_QUE]% )"
