Im so back to Coding

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1148,6 +1148,21 @@
 
   EMG_AME_power_balance:0 "Imperial Dominance"
 
+  EA_Balanced_range:0 "A Harmonic Confederation"
+
+  EA_America_Side:0 "American Power"
+  EA_England_Side:0 "British Power"
+
+  EA_America_Side_low_control_range:0 "Growing American Influence"
+  EA_America_Side_medium_control_range:0 "American Favorism"
+  EA_America_Side_high_control_range:0 "Great American Control"
+  EA_America_Side_total_control_range:0 "Total American Dominance"
+
+  EA_England_Side_low_control_range:0 "Small British Power"
+  EA_England_Side_medium_control_range:0 "Capable British Control"
+  EA_England_Side_high_control_range:0 "Significant British Masterism"
+  EA_England_Side_control_range:0 "Total British Dominance"
+
   PB_Quebec_Pro_American:0 "§bAmerican Aligned§!  ( ~[?QUE.ImpManagement_QUE]% )"
   PB_Quebec_Pro_British:0 "§rBritish Aligned§!  ( ~[?QUE.ImpManagement_QUE]% )"
   PB_Quebec_Neutral:0 "§YNeutral§!  ( ~[?QUE.ImpManagement_QUE]% )"
