--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1163,6 +1163,8 @@
   EA_England_Side_high_control_range:0 "Significant British Masterism"
   EA_England_Side_control_range:0 "Total British Dominance"
 
+  PAX_Confederation_Struggle_Decisions_Flag_England:0 "An Aligned Decision has not been taken"
+
   PB_Quebec_Pro_American:0 "§bAmerican Aligned§!  ( ~[?QUE.ImpManagement_QUE]% )"
   PB_Quebec_Pro_British:0 "§rBritish Aligned§!  ( ~[?QUE.ImpManagement_QUE]% )"
   PB_Quebec_Neutral:0 "§YNeutral§!  ( ~[?QUE.ImpManagement_QUE]% )"
