--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -783,3 +783,7 @@
   PRS_Universal_Empire:0 "Universal Empire"
   PRS_Universal_Empire_DEF:0 "the Universal Empire"
   PRS_Universal_Empire_ADJ:0 "Human"
+
+  PRS_Kingdom:0 "Kingdom of Prussia"
+  PRS_Kingdom_DEF:0 "the Kingdom of Prussia"
+  PRS_Kingdom_ADJ:0 "Prussian"
